<resources>
    <string name="app_name">Where To Eat</string>
    <string name="error_no_network_connection">No network connection</string>
    <string name="info_no_restaurant_found">No Restaurant Found</string>
    <string name="info_adjust_search_configuration">Please change your settings</string>
    <string name="credits">Icons made by Freepik, Madebyoliver, Pixel Buddha, and Vectors Market from www.flaticon.com</string>
    <string name="content_description_thumbnail">Photo of the restaurant</string>
    <string name="button_phone_call">Call</string>
    <string name="button_open_map">Map</string>
    <string name="info_no_map_app">No maps APP available</string>
    <string name="info_no_phone_app">No phone APP available</string>
    <string name="info_no_phone_number">There is no phone number of this restaurant</string>
    <string name="error_no_location_info">Failed to detect location</string>
    <string name="error_need_location_permission">APP needs to know your current location</string>
    <string name="error_google_place_fail">Failed to retrieve restaurant information</string>
    <string name="label_address">Address:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_website">Website:</string>
    <string name="menu_overflow">More</string>
    <string name="menu_search">Search</string>
    <string name="action_sort_by_distance">Sort by Distance</string>
    <string name="action_sort_by_rating">Sort by Rating</string>
    <string name="action_random_pick_one">Pick One!</string>
    <string name="title_main_activity">Any restaurants nearby?</string>
    <string name="action_list_all">List All</string>
    <string name="label_distance">Search Range</string>
    <string name="label_type">Restaurant Type</string>
    <string name="price_level">Price Level</string>
    <string name="open_now">Open Right Now Only?</string>
    <string name="label_opening_hours">Opening Hours</string>
    <string name="info_no_opening_hour_info">No information</string>
    <string name="info_opening">Open</string>
    <string name="info_not_opening">Close</string>
    <string name="info_never_close">Open (24/7)</string>
    <string name="info_close_today">Closed Today</string>
    <string name="info_next_open_time">Open at</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-4852414692234858/1966590129</string>
    <string name="preference_key" translatable="false">com.pychen0918.wheretoeat.PREFERENCE_KEY</string>
    <string name="info_thank_you_for_rating">Thank you!</string>
    <string name="rate_this_app_message">If you enjoy using this APP, would you mind taking a moment to rate it? It would not take more than a minute. Thank you for your support!</string>
    <string name="rate_this_app_rate">Rate now</string>
    <string name="rate_this_app_thanks">Later</string>
    <string name="rate_this_app_cancel">No, thanks</string>
    <string name="action_about">About</string>
    <string name="action_faq">FAQ</string>
    <string name="action_rate_app">Rate This APP</string>
    <string name="label_version">Version:</string>
    <string name="label_author">Author:</string>
    <string name="label_email">E-mail:</string>
    <string name="action_close">Close</string>
    <string name="days_ago">days ago</string>
    <string name="weeks_ago">weeks ago</string>
    <string name="month_ago">month ago</string>
    <string name="months_ago">months ago</string>
    <string name="year_ago">year ago</string>
    <string name="years_ago">years ago</string>
    <string name="today">Today</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait</string>
    <string name="action_share_app">Share This APP</string>
    <string name="info_no_messaging_app">No APP available</string>
    <string name="download">Download</string>
    <string name="label_keyword">Custom Search Keyword</string>
    <string name="hint_keyword">Enter keyword</string>
    <string name="info_no_keyword">Please enter a keyword</string>
    <string name="action_settings">Settings</string>
    <string name="clear_keyword_history">Clear the keywords history</string>
    <string name="download_photo">Download photo of the restaurant</string>
    <string name="use_iu">Use imperial unit</string>
    <string name="use_iu_summary">Check here to use Imperial Unit (miles)</string>
    <string name="download_photo_summary">Check this to download photo of the restaurant</string>
    <string name="clear_keyword_history_summary">Press here to clear all search keyword history</string>
    <string name="use_iu_key" translatable="false">com.pychen0918.wheretoeat.USE_IU_KEY</string>
    <string name="download_photo_key" translatable="false">com.pychen0918.wheretoeat.DOWNLOAD_PHOTO_KEY</string>
    <string name="clear_keyword_history_key" translatable="false">com.pychen0918.wheretoeat.CLEAR_KEYWORD_HISTORY_KEY</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="kilometers">km</string>
    <string name="meters">m</string>
    <string name="miles">miles</string>
    <string name="yards">yards</string>
    <string name="button_share">Share</string>
    <string name="action_share_list">Share the list</string>
    <string name="action_share_restaurant">Share This Restaurant</string>
    <string name="action_open_map">Open Map</string>
    <string name="action_phone_call">Make Phone Call</string>
    <string name="action_browse_website">Browse Website</string>
    <string name="title_single_activity">Restaurant Info</string>
    <string name="info_no_website">There is no website of this restaurant</string>
    <string name="info_no_browser_app">No browser APP available</string>
</resources>
